--- a/inception/Dockerfile
+++ b/inception/Dockerfile
@@ -1,6 +1,6 @@
 FROM centos
 
-COPY inc.cnf /etc/inc.cnf
+COPY inc.cnf /opt/
 
 RUN yum -y install epel-release \
     yum -y install http://www.percona.com/downloads/percona-release/redhat/0.1-3/percona-release-0.1-3.noarch.rpm \
