--- a/postgres11.3-with-zhparser/Dockerfile
+++ b/postgres11.3-with-zhparser/Dockerfile
@@ -14,6 +14,28 @@ RUN apt-get update && apt-get install -y postgresql-plpython-11
 
 RUN echo 'CREATE EXTENSION plpythonu;' > /docker-entrypoint-initdb.d/plpythonu.sql
 
+
+ADD https://github.com/eulerto/pg_similarity/archive/pg_similarity_1_0.tar.gz ./
+
+RUN tar -zxf pg_similarity_1_0.tar.gz
+
+RUN apt-get update \
+    && apt-get install -y make postgresql-server-dev-all gcc
+
+WORKDIR /pg_similarity-pg_similarity_1_0
+
+RUN USE_PGXS=1 make
+
+RUN USE_PGXS=1 make install
+
+RUN cp ./pg_similarity.conf.sample /etc/postgresql/pg_similarity.conf
+
+RUN mkdir -p /docker-entrypoint-initdb.d
+
+COPY ./initdb.sh /docker-entrypoint-initdb.d/initdb.sh
+
+
+
 RUN apt-get update && apt-get install -y --no-install-recommends ca-certificates \
 
         gcc g++ libc6-dev systemtap-sdt-dev cmake make git wget unzip postgresql-server-dev-11 libpq-dev && rm -rf /var/lib/apt/lists/* && \
